<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaginaPrincipala"
    style="@style/PagesBorders">

    <ImageView
        android:id="@+id/imageViewWallet"
        android:layout_width="335dp"
        android:layout_height="203dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRomana"
        app:srcCompat="@drawable/titlu_plus_poza_pagprinc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/link4"
        android:layout_marginTop="50dp">

        <View
            android:id="@+id/strut3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/GreenWhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/strut3"
            android:layout_alignParentLeft="true"
            android:text="@string/login"
            android:typeface="serif" />

        <Button
            android:id="@+id/btnSignin"
            style="@style/GreenWhiteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/strut3"
            android:layout_alignParentRight="true"
            android:text="@string/signin"
            android:typeface="serif" />


    </RelativeLayout>


    <TextView
        android:id="@+id/link1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="104dp"
        android:text="@string/linktoeducatiefinanciara"
        android:textSize="18sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWallet" />

    <TextView
        android:id="@+id/link2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="112dp"
        android:text="@string/linkto9metode"
        android:textSize="18sp"
        android:typeface="serif"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link1" />

    <TextView
        android:id="@+id/link3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="92dp"
        android:text="@string/linktocumintocmestiunbuget"
        android:textSize="18sp"
        android:typeface="serif"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link2" />

    <TextView
        android:id="@+id/link4"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/linktomotivepentrubugetpers"
        android:textSize="18sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link3" />

    <Button
        android:id="@+id/btnRomana"
        style="@style/GreenWhiteButton"
        android:layout_width="66dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/ro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEngleza"
        style="@style/GreenWhiteButton"
        android:layout_width="66dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/en"
        app:layout_constraintBottom_toTopOf="@+id/imageViewWallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>